--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "brybrant",
   "license": "GPL-3.0-only",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,17 +20,18 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
-    "solid-js": "^1.9.1"
+    "solid-js": "^1.9.2"
   },
   "devDependencies": {
     "@brybrant/configs": "github:brybrant/configs",
     "@brybrant/sass-okhsv-okhsl": "^1.0.0",
     "eslint-plugin-solid": "^0.14.3",
-    "sass": "^1.79.4",
-    "vite": "^5.4.8",
-    "vite-plugin-eslint2": "^4.4.2",
+    "sass": "^1.80.3",
+    "vite": "^5.4.9",
+    "vite-plugin-eslint2": "^5.0.1",
     "vite-plugin-solid": "^2.10.2",
-    "vite-plugin-stylelint": "^5.3.1"
+    "vite-plugin-stylelint": "^5.3.1",
+    "vite-plugin-solid-svg": "^0.8.1"
   },
   "browserslist": [
     "> 1%, not dead, not ie 11, not op_mini all"
