--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "brybrant",
   "license": "GPL-3.0-only",
   "private": true,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -20,14 +20,15 @@
     "npm": ">=9.0.0"
   },
   "dependencies": {
-    "solid-js": "^1.9.2"
+    "solid-js": "^1.9.3"
   },
   "devDependencies": {
     "@brybrant/configs": "github:brybrant/configs",
     "@brybrant/sass-okhsv-okhsl": "^1.0.0",
+    "@brybrant/svg-icons": "github:brybrant/svg-icons",
     "eslint-plugin-solid": "^0.14.3",
-    "sass": "^1.80.3",
-    "vite": "^5.4.9",
+    "sass": "^1.80.4",
+    "vite": "^5.4.10",
     "vite-plugin-eslint2": "^5.0.1",
     "vite-plugin-solid": "^2.10.2",
     "vite-plugin-stylelint": "^5.3.1",
