--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "author": "brybrant",
   "license": "GPL-3.0-only",
   "private": true,
-  "version": "0.0.3",
+  "version": "0.0.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -27,12 +27,13 @@
     "@brybrant/sass-okhsv-okhsl": "^1.0.0",
     "@brybrant/svg-icons": "github:brybrant/svg-icons",
     "eslint-plugin-solid": "^0.14.3",
-    "sass": "^1.80.4",
+    "globals": "^15.12.0",
+    "sass-embedded": "^1.80.6",
     "vite": "^5.4.10",
     "vite-plugin-eslint2": "^5.0.1",
     "vite-plugin-solid": "^2.10.2",
-    "vite-plugin-stylelint": "^5.3.1",
-    "vite-plugin-solid-svg": "^0.8.1"
+    "vite-plugin-solid-svg": "^0.8.1",
+    "vite-plugin-stylelint": "^5.3.1"
   },
   "browserslist": [
     "> 1%, not dead, not ie 11, not op_mini all"
